# Wired-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: assistant.db
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
src/agents/: graph.py  prompts.py
src/backend/: dependencies.py  main.py  schemas.py  service.py
src/config/: settings.py
src/database/: sqlite.py
src/memory/: sqlite_memory.py
src/rag/: chroma_store.py  embeddings.py  ingestion.py
src/speech/: transcription.py  tts.py
src/tools/: web_search.py
src/utilities/: logging.py
